third_party/WebKit/Source/core/dom/custom/CustomElementAdoptedCallbackReaction.cpp
@@ -4,20 +4,30 @@
 
 #include "core/dom/custom/CustomElementAdoptedCallbackReaction.h"
 
+#include "core/dom/Document.h"
 #include "core/dom/custom/CustomElementDefinition.h"
 
 namespace blink {
 
 CustomElementAdoptedCallbackReaction::CustomElementAdoptedCallbackReaction(
-    CustomElementDefinition* definition)
+    CustomElementDefinition* definition, Document* oldOwner, Document* newOwner)
     : CustomElementReaction(definition)
+    , m_oldOwner(oldOwner)
+    , m_newOwner(newOwner)
 {
     DCHECK(definition->hasAdoptedCallback());
 }
 
+DEFINE_TRACE(CustomElementAdoptedCallbackReaction)
+{
+    CustomElementReaction::trace(visitor);
+    visitor->trace(m_oldOwner);
+    visitor->trace(m_newOwner);
+}
+
 void CustomElementAdoptedCallbackReaction::invoke(Element* element)
 {
-    m_definition->runAdoptedCallback(element);
+    m_definition->runAdoptedCallback(element, m_oldOwner.get(), m_newOwner.get());
 }
 
 } // namespace blink
