third_party/WebKit/Source/core/dom/custom/CustomElementAdoptedCallbackReaction.h
@@ -12,14 +12,22 @@
 
 namespace blink {
 
+class Document;
+
 class CORE_EXPORT CustomElementAdoptedCallbackReaction final
     : public CustomElementReaction {
     WTF_MAKE_NONCOPYABLE(CustomElementAdoptedCallbackReaction);
 public:
-    CustomElementAdoptedCallbackReaction(CustomElementDefinition*);
+    CustomElementAdoptedCallbackReaction(
+        CustomElementDefinition*, Document* oldOwner, Document* newOwner);
+
+    DECLARE_VIRTUAL_TRACE();
 
 private:
     void invoke(Element*) override;
+
+    Member<Document> m_oldOwner;
+    Member<Document> m_newOwner;
 };
 
 } // namespace blink
